--- a/NewMutants/NewMutants.html
+++ b/NewMutants/NewMutants.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<img src="https://blzim.github.io/kb/Creation/MarvelGraphicNovel/MarvelGraphicNovel004.jpg"><br>
+<img src="../MarvelGraphicNovel/MarvelGraphicNovel004.jpg"><br>
 One Graphic Novel (#4) 1982, 100 issues 1983-1991, 13 issues 2003-2004, 50 issues 2009-2012<br>
 <p>
 <div class="row"><div class="column">
@@ -46,7 +46,7 @@ One Graphic Novel (#4) 1982, 100 issues 1983-1991, 13 issues 2003-2004, 50 issue
 </p><p>
 The New Mutants are a group of teenaged mutant superheroes-in-training appearing in American comic books published by Marvel Comics. They have been the main characters of three successive comic book series, which were spin-offs of the X-Men franchise.
 </p><p>
-The first team of New Mutants characters was created by Chris Claremont and artist Bob McLeod. They first appeared in 1982's <a href="https://blzim.github.io/kb/Creation/MarvelGraphicNovel/MarvelGraphicNovel004.html">Marvel Graphic Novel #4</a> and are subsequently featured in their own title from 1983 until 1991. Like its parent title, The New Mutants highlighted interpersonal and group conflict as well as action and adventure, and featured a large ensemble cast. With the end of the first series, the characters were relaunched as X-Force in a new, eponymous series.
+The first team of New Mutants characters was created by Chris Claremont and artist Bob McLeod. They first appeared in 1982's <a href="../MarvelGraphicNovel/MarvelGraphicNovel004.html">Marvel Graphic Novel #4</a> and are subsequently featured in their own title from 1983 until 1991. Like its parent title, The New Mutants highlighted interpersonal and group conflict as well as action and adventure, and featured a large ensemble cast. With the end of the first series, the characters were relaunched as X-Force in a new, eponymous series.
 </p><p>
 The second New Mutants series, launched in 2003, featured a new group of teenage mutants. Unlike the original New Mutants, they were part of a huge cast of students at the Xavier Institute. In 2004, it was relaunched as New X-Men: Academy X, after which the central group was formally dubbed the "New Mutants." In the aftermath of the "M-Day" crossover storyline in late 2005, the remaining students were merged into one junior team, the New X-Men.
 </p><p>
