--- a/Drax/Drax.html
+++ b/Drax/Drax.html
@@ -2,17 +2,30 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Drax</title>
 </head>
 
 <body>
-<h2>Drax</h2>
-<img src="Drax.jpg"> <br>
-Series: 11 issues, 2015<br>
-Publisher: Marvel<br>
+<img src="Drax.jpg">
 <p>
-Written by Cm Punk and Cullen Bunn. Art and Cover by Scott Hepburn. 
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Drax.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Drax2.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+Since 2015 by Marvel
 </p><p>
 Drax the Destroyer is the muscle for the Guardians of the Galaxy, but what does he do when he's not adventuring through space with the Guardians? He lets his bloodthirsty quest for revenge take the pilot seat, of course! Determined to find and kill Thanos once and for all, Drax is ready to take on the universe. But when you're tooling around the universe in a ship aptly named 'The Space Sucker', an unwavering desire for bloodshed isn't enough to keep a mission from derailing. Drax crash lands into his wildest adventures ever, encountering foes no one will ever expect! The depths of space may not be big enough to contain this much grit, vengeance and all-out action! 
 </p>
