--- a/Magik/Magik.html
+++ b/Magik/Magik.html
@@ -2,15 +2,40 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Magik</title>
 </head>
 
 <body>
-Magik<br>
-<img src="Magik1983.jpg"> <img src="Magik2000.jpg"><br>
-Series: 4 issues mini-series 1984, 2000<br>
-Publisher: Marvel<br>
+<img src="Magik1.jpg"> 
+<p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Magik1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Magik2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Magik3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Magik4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Magik5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Magik6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Magik7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Magik8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Magik12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Magik9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Magik10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Magik11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Magik13.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 <p>
 Magik was a four-issue comic book limited series published by Marvel Comics in 1983–1984, starring the fictional characters Magik and Storm. It was written by Chris Claremont and illustrated by John Buscema, Ron Frenz, Sal Buscema, and Tom Palmer. After being out-of-print for a few decades, the series was collected as a hardcover graphic novel titled X-Men - Magik: Storm &amp; Illyana and released in December 2008.
 </p><p>
@@ -20,19 +45,22 @@ Belasco, demon lord of Limbo, wants to use Illyana to help the Elder Gods destro
 </p><p>
 Storm transports them to her garden sanctuary in Limbo. Unable to remove Belasco's corruption from Illyana, Storm decides to help her combat it by taking her on as an apprentice. She spends a year showing Illyana how to separate her astral body from her physical form, while showing her a massive oak that grew from an acorn she created. Disapproving of Illyana being trained in sorcery, Cat kidnaps her.
 </p><p>
-<img src="Magik1983issue4.jpg">
-</p><p>
 Cat takes Illyana to a replica of the Savage Land in Limbo, where she trains her physically and teaches her to sword fight. They then storm Belasco's tower. It is protected by a corrupted version of Nightcrawler, whom Cat kills. Cat then attempts to use her phasing power to take her and Illyana to Earth, but Belasco intercepts them. Belasco turns Cat into a feline demon and gives Illyana a knife. Illyana cuts herself, and the blood forms the second bloodstone in the locket.
 </p><p>
 Illyana spends three years learning magic from Belasco, while secretly reading every book in his library, plotting his downfall. Alone in her room, she attempts to imitate the creation powers Storm showed her by forming an acorn from a part of herself, only to find the acorn is black and rotten. Hearing Belasco's voice outside her room, she panics, and her mutant power to create teleportational light discs manifests itself. Illyana uses a disc to enter Belasco's library, hoping to steal his grimoire, but Storm intervenes, accidentally sending her into another disc. 
 </p><p>
 She finds herself in the past, witnessing Storm "killing" Belasco, who claims to be immune to death while in Limbo; it is this act which binds Storm to Belasco. She teleports back to the present to find Storm battling Belasco. Cat fatally wounds Storm, then attacks Illyana. She kills Cat in self-defense. Belasco orders her to sacrifice Storm's soul to the Elder Gods. Instead, she kills Storm to save her soul and teleports to Storm's garden, where she buries her. Enraged by her defiance, Belasco captures Illyana, extracts another bloodstone from her essence, and casts her out into a wintery wilderness as punishment.
 </p><p>
+Illyana can transform into a demon named Darkchylde, with horns, a tail and hooves. Being Darkchylde inceases her powers, but decreases her control and humanity. 
+</p><p>
 Illyana finds Storm's massive oak and spends years trying to use it to help create a living acorn from her essence, only to produce still more rotten acorns. When the oak finally crumbles to dust from her efforts, Illyana realizes that she was only trying to create life as a means to an end: destroying Belasco. She tries instead to manifest her desire directly, using the last of her power to create a "Soulsword". 
 </p><p>
 The enchantment that held her in Storm's garden is banished in the process and she takes a stepping disc to confront Belasco. While fighting Belasco she realizes she is replaying the same scene by which Storm was corrupted, so she spares his life and he escapes. She then uses a light circle to return to Earth, rejoining the X-Men seconds after she had left them.
 </p><p>
+The Magik mini-series story continues in <a href="../NewMutants/NewMutants.html">The New Mutants</a> #14. The story is told from Illyana's point-of-view, and she joins the New Mutants this issue.
+</p><p> 
 2000: Magik teams up with Nightcrawler to fight Dormammu, Mephisto and Nightmare, who plan to take over Limbo and then invade Earth.
 </p>
+
 </body>
 </html>
