--- a/index.html
+++ b/index.html
@@ -7691,6 +7691,13 @@
 </tr>
 
 <tr>
+<td>At Bay Press</td>
+<td>2008</td>
+<td>Publisher</td>
+<td><a href="AtBayPress/AtBayPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>At The Shore</td>
 <td>2016</td>
 <td>Alternative</td>
@@ -11839,6 +11846,13 @@
 <td>2005</td>
 <td>Heroic</td>
 <td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Black Eye Books</td>
+<td>1993</td>
+<td>Publisher</td>
+<td><a href="BlackEyeBooks/BlackEyeBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -21000,6 +21014,12 @@
 <td><a href="CupplesLeon/CupplesLeon.html">Details</a></td>
 </tr>
 
+<tr>
+<td>Curb Angels</td>
+<td>2017</td>
+<td>At Bay Press</td>
+<td><a href="AtBayPress/AtBayPress.html">Details</a></td>
+</tr>
 <tr>
 <td>Curio Cabinet</td>
 <td>2008</td>
