--- a/index.html
+++ b/index.html
@@ -10434,6 +10434,13 @@
 </tr>
 
 <tr>
+<td>Benitez Productions</td>
+<td>2015</td>
+<td>Publisher</td>
+<td><a href="BenitezProductions/BenitezProductions.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Benjamin Constant</td>
 <td>1845</td>
 <td>Creator</td>
@@ -11718,6 +11725,13 @@
 <td>2017</td>
 <td>Marvel</td>
 <td><a href="BlackBolt/BlackBolt.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Black Bull Entertainment</td>
+<td>2000</td>
+<td>Publisher</td>
+<td><a href="BlackBull/BlackBull.html">Details</a></td>
 </tr>
 
 <tr>
@@ -33347,6 +33361,13 @@
 <td>1972</td>
 <td>Tatsunoko</td>
 <td><a href="Gatchaman/Gatchaman.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Gatecrasher</td>
+<td>2000</td>
+<td>Black Bull</td>
+<td><a href="Gatecrasher/Gatecrasher.html">Details</a></td>
 </tr>
 
 <tr>
