--- a/index.html
+++ b/index.html
@@ -14977,6 +14977,13 @@
 </tr>
 
 <tr>
+<td>Burlyman Entertainment</td>
+<td>2003</td>
+<td>Publisher</td>
+<td><a href="BurlymanEntertainment/BurlymanEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Burma Chronicles</td>
 <td>2010</td>
 <td>Drawn &amp; Quarterly</td>
@@ -26776,6 +26783,13 @@
 <td>1986</td>
 <td>Crystal</td>
 <td><a href="CrystalPublications/CrystalPublications.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Eagle Comics</td>
+<td>1983</td>
+<td>Publisher</td>
+<td><a href="EagleComics/EagleComics.html">Details</a></td>
 </tr>
 
 <tr>
