--- a/ColumbiaComics/ColumbiaComics.html
+++ b/ColumbiaComics/ColumbiaComics.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<h1>Columbia Comics</h1>
+<img src="Columbia1.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -18,11 +18,21 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src=""></div>
+<div class="mySlides" style="text-align: center;"><img src="Columbia1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Columbia2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Columbia3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Columbia4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Columbia5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Columbia6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Columbia7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Columbia8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Columbia9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Columbia10.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
+
 </p><p>
 Columbia Comics Corporation was a comic book publisher active in the 1940s whose most well-known title was Big Shot Comics. Comics creators who worked for Columbia included Fred Guardineer, on Marvelo, the Monarch of Magicians; and Ogden Whitney and Gardner Fox on Skyman.
 </p><p>
@@ -30,15 +40,17 @@ Columbia Comics' first published title was the anthology title Big Shot Comics, 
 </p><p>
 Titles
 </p><p>
-<li>Big Shot Comics (1940)
-<li>Dixie Dugan (1942)
-<li>The Face (1941)
-<li>Joe Palooka (1942)
-<li>Ken Stuart (1948)
-<li>Mickey Finn	(1944)
-<li>Skyman (1941)
+<li><a href="Columbia1.jpg">Big Shot</a> (1942)
+<li><a href="Columbia2.jpg">Big Shot Comics</a> (1940)
+<li><a href="Columbia3.jpg">Columbia Comics</a> (1941)
+<li><a href="Columbia4.jpg">Dixie Dugan</a> (1942)
+<li><a href="Columbia5.jpg">The Face</a> (1941)
+<li><a href="Columbia6.jpg">Joe Palooka</a> (1942)
+<li><a href="Columbia7.jpg">Ken Stuart</a> (1948)
+<li><a href="Columbia8.jpg">Mickey Finn</a>	(1944)
+<li><a href="Columbia9.jpg">Skyman</a> (1941)
 <li><a href="../SparkyWatts/SparkyWatts.html">Sparky Watts</a> (1942)
-<li>Tony Trent (1948)
+<li><a href="Columbia10.jpg">Tony Trent</a> (1948)
 
 </p>
 
