--- a/Fantagraphics/Fantagraphics.html
+++ b/Fantagraphics/Fantagraphics.html
@@ -160,6 +160,7 @@
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics139.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics140.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics141.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics142.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -352,6 +353,8 @@ Titles
 <li><a href="../JoeSacco/JoeSacco.html">Yahoo</a> (1988)
 <li><a href="../Zap/zap.html">Zap</a> (2016)
 <li><a href="Fantagraphics136.jpg">Zero Zero</a> (1995)
+<li><a href="Fantagraphics142.jpg">Zoot!</a> (1995)
+
 
 </p>
 </body>
