--- a/index.html
+++ b/index.html
@@ -78681,6 +78681,13 @@
 </tr>
 
 <tr>
+<td>Zoot!</td>
+<td>1992</td>
+<td>Fantagraphics</td>
+<td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Zorann: Star Warrior</td>
 <td>1989</td>
 <td>Blue Comet</td>
