--- a/Aircel/Aircel.html
+++ b/Aircel/Aircel.html
@@ -158,7 +158,7 @@ Titles
 <li><a href="Aircel2.jpg">Leather &amp; Lace</a> (1989)
 <li><a href="Aircel51.jpg">Leather &amp; Lace Book II: Blood Sex &amp; Tears</a> (1991)
 <li><a href="Aircel52.jpg">Lizard Lady</a> (1991)
-<li><a href="Aircel54.jpg">Maelstrom</a> (1987)
+<li><a href="../Maelstrom/Maelstrom.html">Maelstrom</a> (1987)
 <li><a href="Aircel53.jpg">Mara</a> (1991)
 <li><a href="Aircel5.jpg">Men In Black</a> (1991)
 <li><a href="Aircel55.jpg">Mummy's Curse</a> (1990)
