--- a/Fantagraphics/Fantagraphics.html
+++ b/Fantagraphics/Fantagraphics.html
@@ -305,6 +305,7 @@ Titles
 <li><a href="Fantagraphics99.jpg">Nancy Complete Dailies</a> (2012)
 <li><a href="Fantagraphics100.jpg">Naughty Bits</a> (1991)
 <li><a href="../NeatStuff/NeatStuff.html">Neat Stuff</a> (1985)
+<li><a href="Fantagraphics143.jpg">Neil and Buzz in Space and Time</a> (1989)
 <li><a href="Fantagraphics101.jpg">Nemo, the Classic Comics Library</a> (1983)
 <li><a href="Fantagraphics103.jpg">Newave! The Underground Mini Comics of the 1980s</a> (2010)
 <li><a href="Fantagraphics102.jpg">Nimrod</a> (1998)
