--- a/index.html
+++ b/index.html
@@ -27584,6 +27584,13 @@
 </tr>
 
 <tr>
+<td>Eliminator</td>
+<td>1995</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Eliminator Full Color Special</td>
 <td>1991</td>
 <td>Eternity</td>
@@ -27714,6 +27721,13 @@
 <td>2006</td>
 <td>Devil's Due</td>
 <td><a href="DevilsDue/DevilsDue.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Elven</td>
+<td>1994</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -28589,6 +28603,13 @@
 <td>1987</td>
 <td>Eternity</td>
 <td><a href="EternityComics/EternityComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ex-Mutants</td>
+<td>1992</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -30355,6 +30376,13 @@
 </tr>
 
 <tr>
+<td>Ferret</td>
+<td>1993</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Ferro City</td>
 <td>2005</td>
 <td>Image</td>
@@ -30429,6 +30457,13 @@
 <td>2009</td>
 <td>Boom!</td>
 <td><a href="Boom!/Boom!.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Fictioneer Books</td>
+<td>1974</td>
+<td>Publisher</td>
+<td><a href="FictioneerBooks/FictioneerBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -30800,6 +30835,13 @@
 <td>1990</td>
 <td>Aircel</td>
 <td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Firearm</td>
+<td>1993</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -31957,6 +31999,13 @@
 </tr>
 
 <tr>
+<td>Frankenstein</td>
+<td>1990</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Frankenstein Alive, Alive!</td>
 <td>2012</td>
 <td>IDW</td>
@@ -32062,6 +32111,13 @@
 </tr>
 
 <tr>
+<td>Freddy's Last Dance</td>
+<td>1993</td>
+<td>MBS</td>
+<td><a href="MBSPublishing/MBSPublishing.html">Details</a></td>
+</tr>
+ 
+<tr>
 <td>Frederick And Eloise: A Love Story</td>
 <td>1993</td>
 <td>Fantagraphics</td>
@@ -32101,6 +32157,13 @@
 <td>2011</td>
 <td>Fantagraphics</td>
 <td><a href="Alex/Alex.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Freex</td>
+<td>1993</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -33515,6 +33578,13 @@
 <td>2003</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Genesis</td>
+<td>1993</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -35104,6 +35174,13 @@
 <td>2012</td>
 <td>Boom!</td>
 <td><a href="Boom!/Boom!.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Gracestone</td>
+<td>1995</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -36846,6 +36923,13 @@
 <td>1991</td>
 <td>Aircel</td>
 <td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hardcase</td>
+<td>1993</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -42630,6 +42714,13 @@
 </tr>
 
 <tr>
+<td>Jumpstart: The Strangers Collection</td>
+<td>1994</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Jungle Action</td>
 <td>1954</td>
 <td>Atlas</td>
@@ -45262,6 +45353,13 @@
 </tr>
 
 <tr>
+<td>Last Planet</td>
+<td>1993</td>
+<td>MBS</td>
+<td><a href="MBSPublishing/MBSPublishing.html">Details</a></td>
+</tr>
+ 
+<tr>
 <td>Last Reign</td>
 <td>2008</td>
 <td>Boom!</td>
@@ -45948,10 +46046,24 @@
 </tr>
 
 <tr>
-<td>Liberator</td>
+<td>Libby Ellis</td>
 <td>1987</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Libby Ellis</td>
+<td>1988</td>
 <td>Eternity</td>
 <td><a href="EternityComics/EternityComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Liberator</td>
+<td>1987</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -47890,7 +48002,7 @@
 <td>Maelstrom</td>
 <td>1987</td>
 <td>Aircel</td>
-<td><a href="Aircel/Aircel.html">Details</a></td>
+<td><a href="Maelstrom/Maelstrom.html">Details</a></td>
 </tr>
 
 <tr>
@@ -48125,6 +48237,13 @@
 </tr>
 
 <tr>
+<td>Malibu Sun</td>
+<td>1992</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Malignant Man</td>
 <td>2011</td>
 <td>Boom!</td>
@@ -48206,6 +48325,13 @@
 <td>1987</td>
 <td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Man Of War</td>
+<td>1993</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -49559,6 +49685,13 @@
 </tr>
 
 <tr>
+<td>MBS Publishing</td>
+<td>1993</td>
+<td>Publisher</td>
+<td><a href="MBSPublishing/MBSPublishing.html">Details</a></td>
+</tr>
+ 
+<tr>
 <td>Mean Machine</td>
 <td>1993</td>
 <td>Fleetway Quality</td>
@@ -50600,6 +50733,13 @@
 </tr>
 
 <tr>
+<td>Mighty Magnor</td>
+<td>1993</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Mighty Marvel Western</td>
 <td>1968</td>
 <td>Marvel</td>
@@ -50872,6 +51012,13 @@
 <td><a href="ACG/ACG.html">Details</a></td>
 </tr>
 
+<tr>
+<td>Mind Benders</td>
+<td>1993</td>
+<td>MBS</td>
+<td><a href="MBSPublishing/MBSPublishing.html">Details</a></td>
+</tr>
+ 
 <tr>
 <td>MIND MGMT</td>
 <td>2012</td>
@@ -51783,6 +51930,27 @@
 <tr>
 
 <tr>
+<td>Mortal Kombat</td>
+<td>1994</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mortal Kombat: Goro, Prince Of Pain</td>
+<td>1994</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mortal Kombat: Rayden And Kano</td>
+<td>1995</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Mortal Souls</td>
 <td>2002</td>
 <td>Avatar</td>
@@ -52416,6 +52584,13 @@
 <td>2006</td>
 <td>Oni</td>
 <td><a href="OniPress/OniPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mutants vs. Ultras: First Encounters</td>
+<td>1995</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -53252,6 +53427,20 @@
 </tr>
 
 <tr>
+<td>Necroscope</td>
+<td>1992</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Necroscope Book II: Wamphyri</td>
+<td>1993</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Necrotica</td>
 <td>1994</td>
 <td>Fathom</td>
@@ -53304,6 +53493,13 @@
 <td>1950</td>
 <td>Fawcett</td>
 <td><a href="Fawcett/Fawcett.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Neil and Buzz in Space and Time</td>
+<td>1989</td>
+<td>Fantagraphics</td>
+<td><a href="Fantgraphics/Fantagraphics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -53937,6 +54133,13 @@
 </tr>
 
 <tr>
+<td>Night Man</td>
+<td>1993</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Night Mary</td>
 <td>2005</td>
 <td>IDW</td>
@@ -54077,20 +54280,6 @@
 </tr>
 
 <tr>
-<td>Nightjar</td>
-<td>2004</td>
-<td>Avatar</td>
-<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
-</tr>
-
-<tr>
-<td>Nightjar: Hollow Bones</td>
-<td>2004</td>
-<td>Avatar</td>
-<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
-</tr>
-
-<tr>
 <td>Night Owl Society</td>
 <td>2017</td>
 <td>IDW</td>
@@ -54102,6 +54291,26 @@
 <td>1990</td>
 <td>Marvel</td>
 <td><a href="NightRaven/NightRaven.html">Details</a></td>
+</tr>
+<tr>
+<td>Night Realm Presents: Nathan Impaler, Monster Hunter</td>
+<td>1990</td>
+<td>Night Realm</td>
+<td><a href="NightRealmPublishing/NightRealmPublishing.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Night Realm Presents: Nathan Impaler, Monster Hunter Werewolf Special</td>
+<td>1993</td>
+<td>Night Realm</td>
+<td><a href="NightRealmPublishing/NightRealmPublishing.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Night Realm Publishing</td>
+<td>1990</td>
+<td>Publisher</td>
+<td><a href="NightRealmPublishing/NightRealmPublishing.html">Details</a></td>
 </tr>
 
 <tr>
@@ -54140,10 +54349,45 @@
 </tr>
 
 <tr>
+<td>Night Wynd Enterprises</td>
+<td>1991</td>
+<td>Publisher</td>
+<td><a href="NightWynd/NightWynd.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Night Zero</td>
 <td>1990</td>
 <td>Fleetway Quality</td>
 <td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Night's Children</td>
+<td>1991</td>
+<td>FantaCo</td>
+<td><a href="FantaCoEnterprises/FantaCoEnterprises.html">Details</a></td> 
+</tr>
+
+<tr>
+<td>Night's Children: Double Indemnity</td>
+<td>1992</td>
+<td>FantaCo</td>
+<td><a href="FantaCoEnterprises/FantaCoEnterprises.html">Details</a></td> 
+</tr>
+
+<tr>
+<td>Night's Children: Foreplay</td>
+<td>1991</td>
+<td>FantaCo</td>
+<td><a href="FantaCoEnterprises/FantaCoEnterprises.html">Details</a></td> 
+</tr>
+
+<tr>
+<td>Night's Children: Vampyr</td>
+<td>1992</td>
+<td>FantaCo</td>
+<td><a href="FantaCoEnterprises/FantaCoEnterprises.html">Details</a></td> 
 </tr>
 
 <tr>
@@ -54158,6 +54402,20 @@
 <td>1998</td>
 <td>Marvel</td>
 <td><a href="Nighthawk/Nighthawk.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Nightjar</td>
+<td>2004</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Nightjar: Hollow Bones</td>
+<td>2004</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -54259,34 +54517,6 @@
 </tr>
 
 <tr>
-<td>Night Realm Presents: Nathan Impaler, Monster Hunter</td>
-<td>1990</td>
-<td>Night Realm</td>
-<td><a href="NightRealmPublishing/NightRealmPublishing.html">Details</a></td>
-</tr>
-
-<tr>
-<td>Night Realm Presents: Nathan Impaler, Monster Hunter Werewolf Special</td>
-<td>1993</td>
-<td>Night Realm</td>
-<td><a href="NightRealmPublishing/NightRealmPublishing.html">Details</a></td>
-</tr>
-
-<tr>
-<td>Night Realm Publishing</td>
-<td>1990</td>
-<td>Publisher</td>
-<td><a href="NightRealmPublishing/NightRealmPublishing.html">Details</a></td>
-</tr>
-
-<tr>
-<td>Night Wynd Enterprises</td>
-<td>1991</td>
-<td>Publisher</td>
-<td><a href="NightWynd/NightWynd.html">Details</a></td>
-</tr>
-
-<tr>
 <td>Nights Dominion</td>
 <td>2016</td>
 <td>Oni</td>
@@ -54347,34 +54577,6 @@
 <td>2016</td>
 <td>DC</td>
 <td><a href="DCComics/DCComics.html">Details</a></td>
-</tr>
-
-<tr>
-<td>Night's Children</td>
-<td>1991</td>
-<td>FantaCo</td>
-<td><a href="FantaCoEnterprises/FantaCoEnterprises.html">Details</a></td> 
-</tr>
-
-<tr>
-<td>Night's Children: Double Indemnity</td>
-<td>1992</td>
-<td>FantaCo</td>
-<td><a href="FantaCoEnterprises/FantaCoEnterprises.html">Details</a></td> 
-</tr>
-
-<tr>
-<td>Night's Children: Foreplay</td>
-<td>1991</td>
-<td>FantaCo</td>
-<td><a href="FantaCoEnterprises/FantaCoEnterprises.html">Details</a></td> 
-</tr>
-
-<tr>
-<td>Night's Children: Vampyr</td>
-<td>1992</td>
-<td>FantaCo</td>
-<td><a href="FantaCoEnterprises/FantaCoEnterprises.html">Details</a></td> 
 </tr>
 
 <tr>
@@ -55850,8 +56052,8 @@
 <tr>
 <td>Outlander</td>
 <td>1987</td>
-<td>Eternity</td>
-<td><a href="EternityComics/EternityComics.html">Details</a></td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -58519,6 +58721,13 @@
 </tr>
 
 <tr>
+<td>Prime</td>
+<td>1993</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Prime Cuts</td>
 <td>1986</td>
 <td>Fantagraphics</td>
@@ -58728,6 +58937,13 @@
 </tr>
 
 <tr>
+<td>Project A-KO</td>
+<td>1994</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Project Superpowers</td>
 <td>2008</td>
 <td>Dynamite</td>
@@ -58812,10 +59028,24 @@
 </tr>
 
 <tr>
+<td>Protectors</td>
+<td>1992</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Protocol: Orphans</td>
 <td>2013</td>
 <td>Boom!</td>
 <td><a href="Boom!/Boom!.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Prototype</td>
+<td>1993</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -59722,6 +59952,13 @@
 </tr>
 
 <tr>
+<td>Raver</td>
+<td>1993</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>RAW</td>
 <td>1980</td>
 <td>Raw Books</td>
@@ -59852,6 +60089,13 @@
 <td>2018</td>
 <td>Vault</td>
 <td><a href="VaultComics/VaultComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Read My Lips: The Unofficial Cartoon Biography Of George Bush</td>
+<td>1992</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -61106,6 +61350,13 @@
 </tr>
 
 <tr>
+<td>Ripfire</td>
+<td>1995</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Ripley's Believe It Or Not!</td>
 <td>1918</td>
 <td>New York Globe</td>
@@ -61425,6 +61676,13 @@
 <td>1988</td>
 <td>Eternity</td>
 <td><a href="EternityComics/EternityComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Robotech II: The Sentenals</td>
+<td>1989</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -62050,6 +62308,13 @@
 </tr>
 
 <tr>
+<td>Rovers</td>
+<td>1987</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Rowans Ruin</td>
 <td>2015</td>
 <td>Boom!</td>
@@ -62187,6 +62452,20 @@
 <td>2003</td>
 <td>Marvel</td>
 <td><a href="Runaways/Runaways.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Rune</td>
+<td>1994</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Rune / Silver Surfer</td>
+<td>1995</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -64826,6 +65105,13 @@
 </tr>
 
 <tr>
+<td>Shooks: Omega Team</td>
+<td>2008</td>
+<td>Devil's Due</td>
+<td><a href="DevilsDue/DevilsDue.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Shooters</td>
 <td>2012</td>
 <td>Vertigo</td>
@@ -65861,6 +66147,13 @@
 </tr>
 
 <tr>
+<td>Sludge</td>
+<td>1993</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Slutburger</td>
 <td>1991</td>
 <td>Drawn &amp; Quarterly</td>
@@ -66183,6 +66476,13 @@
 </tr>
 
 <tr>
+<td>Solitaire</td>
+<td>1993</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Solo</td>
 <td>1994</td>
 <td>Marvel</td>
@@ -66229,6 +66529,13 @@
 <td>2003</td>
 <td>CrossGen</td>
 <td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Solution</td>
+<td>1993</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -66848,6 +67155,13 @@
 </tr>
 
 <tr>
+<td>Spicy Mystery Stories</td>
+<td>1990</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Spicy Tales</td>
 <td>1988</td>
 <td>Eternity</td>
@@ -67115,13 +67429,6 @@
 
 <tr>
 <td>Spooks</td>
-<td>2008</td>
-<td>Devil's Due</td>
-<td><a href="DevilsDue/DevilsDue.html">Details</a></td>
-</tr>
-
-<tr>
-<td>Shooks: Omega Team</td>
 <td>2008</td>
 <td>Devil's Due</td>
 <td><a href="DevilsDue/DevilsDue.html">Details</a></td>
@@ -67454,6 +67761,13 @@
 <td>2018</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Star Trek: Deep Space Nine<td>
+<td>1994</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -68427,6 +68741,13 @@
 <td>1989</td>
 <td>Rip Off</td>
 <td><a href="RipOffPress/RipOffPress.html">Details</a>
+</tr>
+
+<tr>
+<td>Strangers</td>
+<td>1993</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -69571,6 +69892,20 @@
 </tr>
 
 <tr>
+<td>T2: Cybernetic Dawn</td>
+<td>1995</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>T2: Nuclear Twilight</td>
+<td>1995</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>T-Minus 1</td>
 <td>1988</td>
 <td>Renegade</td>
@@ -70030,6 +70365,13 @@
 <td>1984</td>
 <td>WB</td>
 <td><a href="TarzanOfTheApes/TarzanOfTheApes.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tarzan The Warrior</td>
+<td>1992</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -72102,6 +72444,13 @@
 
 <tr>
 <td>Trouble With Girls</td>
+<td>1987</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Trouble With Girls</td>
 <td>1994</td>
 <td>Marvel</td>
 <td><a href="TroubleWithGirls/TroubleWithGirls.html">Details</a></td>
@@ -72749,6 +73098,13 @@
 <td>1993</td>
 <td>Harvey</td>
 <td><a href="HarveyComics/HarveyComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ultraverse Premier</td>
+<td>1993</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -77165,6 +77521,13 @@
 <td>1939</td>
 <td>Fox Comics</td>
 <td><a href="WonderComics/WonderComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wonder Comix</td>
+<td>1987</td>
+<td>Publisher</td>
+<td><a href="WonderComix/WonderComix.html">Details</a></td>
 </tr>
 
 <tr>
