--- a/index.html
+++ b/index.html
@@ -4654,6 +4654,13 @@
 </tr>
 
 <tr>
+<td>Alpha Wave</td>
+<td>1987</td>
+<td>Darkline</td>
+<td><a href="DarklinePublications/DarklinePublications.html">Details</a><td>
+</tr>
+
+<tr>
 <td>Alphonse And Gaston</td>
 <td>1901</td>
 <td>Cupples &amp; Leon</td>
@@ -21820,6 +21827,13 @@
 </tr>
 
 <tr>
+<td>Dark Adventures</td>
+<td>1987</td>
+<td>Darkline</td>
+<td><a href="DarklinePublications/DarklinePublications.html">Details</a><td>
+</tr>
+
+<tr>
 <td>Dark And Bloody</td>
 <td>2016</td>
 <td>Vertigo</td>
@@ -22023,13 +22037,6 @@
 </tr>
 
 <tr>
-<td>Darklight</td>
-<td>2000</td>
-<td>Sirius</td>
-<td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
-</tr>
-
-<tr>
 <td>Dark Mysteries</td>
 <td>1951</td>
 <td>Master Comics</td>
@@ -22198,6 +22205,20 @@
 </tr>
 
 <tr>
+<td>Darklight</td>
+<td>2000</td>
+<td>Sirius</td>
+<td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Darkline Publications</td>
+<td>1987</td>
+<td>Publisher</td>
+<td><a href="DarklinePublications/DarklinePublications.html">Details</a><td>
+</tr>
+
+<tr>
 <td>Darklon</td>
 <td>1983</td>
 <td>PC</td>
@@ -22243,6 +22264,13 @@
 <td>1993</td>
 <td>Boneyard</td>
 <td><a href="BoneyardPress/BoneyardPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Darkside</td>
+<td>1987</td>
+<td>Darkline</td>
+<td><a href="DarklinePublications/DarklinePublications.html">Details</a><td>
 </tr>
 
 <tr>
