--- a/index.html
+++ b/index.html
@@ -14676,6 +14676,13 @@
 </tr>
 
 <tr>
+<td>Buce N Gar</td>
+<td>1986</td>
+<td>RAK</td>
+<td><a href="RAKGraphics/RAKGraphics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Buck Duck</td>
 <td>1993</td>
 <td>Atlas</td>
@@ -16997,6 +17004,20 @@
 <td>2017</td>
 <td>Alterna</td>
 <td><a href="Alterna/Alterna.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Chakan the Forever Man</td>
+<td>1990</td>
+<td>RAK</td>
+<td><a href="RAKGraphics/RAKGraphics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Chakan the Forever Man: The Nightmares Thrall</td>
+<td>1994</td>
+<td>RAK</td>
+<td><a href="RAKGraphics/RAKGraphics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -21386,6 +21407,27 @@
 </tr>
 
 <tr>
+<td>Dabel Brothers &amp; Del Rey Preview Free Comic Book Day</td>
+<td>2008</td>
+<td>Publisher</td>
+<td><a href="DabelBrothersProductions/DabelBrothersProductions.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dabel Brothers Productions</td>
+<td>2001</td>
+<td>Publisher</td>
+<td><a href="DabelBrothersProductions/DabelBrothersProductions.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dabel Brothers Spotlight, Free Comic Book Day</td>
+<td>2009</td>
+<td>Publisher</td>
+<td><a href="DabelBrothersProductions/DabelBrothersProductions.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Daemon Mask</td>
 <td>1987</td>
 <td>Amazing</td>
@@ -23031,6 +23073,13 @@
 
 <tr>
 <td>Dean Koontz's Frankenstein: Prodigal Son</td>
+<td>2008</td>
+<td>Dabel Brothers</td>
+<td><a href="DabelBrothersProductions/DabelBrothersProductions.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dean Koontz's Frankenstein: Prodigal Son</td>
 <td>2010</td>
 <td>Dynamite</td>
 <td><a href="Dynamite/Dynamite.html">Details</a></td>
@@ -23041,6 +23090,13 @@
 <td>2015</td>
 <td>Dynamite</td>
 <td><a href="Dynamite/Dynamite.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dean Koontz's Nevermore</td>
+<td>2009</td>
+<td>Dabel Brothers</td>
+<td><a href="DabelBrothersProductions/DabelBrothersProductions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -25046,6 +25102,13 @@
 
 <tr>
 <td>Dog Eaters</td>
+<td>2008</td>
+<td>Dabel Brothers</td>
+<td><a href="DabelBrothersProductions/DabelBrothersProductions.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dog Eaters</td>
 <td>2019</td>
 <td>Antarctic Press</td>
 <td><a href="AntarcticPress/AntarcticPress.html">Details</a></td>
@@ -26025,13 +26088,6 @@
 </tr>
 
 <tr>
-<td>Dragon Lines</td>
-<td>1993</td>
-<td>Epic</td>
-<td><a href="DragonLines/DragonLines.html">Details</a></td>
-</tr>
-
-<tr>
 <td>Dragon Flux</td>
 <td>1996</td>
 <td>Antarctic Press</td>
@@ -26046,10 +26102,10 @@
 </tr>
 
 <tr>
-<td>Dragon Quest</td>
-<td>1986</td>
-<td>Silver Wolf</td>
-<td><a href="SilverWolf/SilverWolf.html">Details</a></td>
+<td>Dragon Lines</td>
+<td>1993</td>
+<td>Epic</td>
+<td><a href="DragonLines/DragonLines.html">Details</a></td>
 </tr>
 
 <tr>
@@ -26060,10 +26116,38 @@
 </tr>
 
 <tr>
+<td>Dragon Of The Valkyr</td>
+<td>1988</td>
+<td>RAK</td>
+<td><a href="RAKGraphics/RAKGraphics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dragon Quest</td>
+<td>1986</td>
+<td>Silver Wolf</td>
+<td><a href="SilverWolf/SilverWolf.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dragon's Claws</td>
 <td>1988</td>
 <td>Marvel</td>
 <td><a href="DragonsClaws/DragonsClaws.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dragon's Lair</td>
+<td>2003</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dragon's Lair</td>
+<td>2006</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -26123,27 +26207,6 @@
 </tr>
 
 <tr>
-<td>Dragonpro</td>
-<td>2006</td>
-<td>Antarctic Press</td>
-<td><a href="AntarcticPress/AntarcticPress.html">Details</a></td>
-</tr>
-
-<tr>
-<td>Dragon's Lair</td>
-<td>2003</td>
-<td>CrossGen</td>
-<td><a href="CrossGen/CrossGen.html">Details</a></td>
-</tr>
-
-<tr>
-<td>Dragon's Lair</td>
-<td>2006</td>
-<td>Arcana</td>
-<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
-</tr>
-
-<tr>
 <td>Dragonlance: Chronicles</td>
 <td>2005</td>
 <td>Devil's Due</td>
@@ -26176,6 +26239,13 @@
 <td>2004</td>
 <td>Devil's Due</td>
 <td><a href="DevilsDue/DevilsDue.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dragonpro</td>
+<td>2006</td>
+<td>Antarctic Press</td>
+<td><a href="AntarcticPress/AntarcticPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -26441,6 +26511,13 @@
 <td>2017</td>
 <td>Black Mask</td>
 <td><a href="BlackMask/BlackMask.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dresden Files: Welcome To The Jungle</td>
+<td>2008</td>
+<td>Dabel Brothers</td>
+<td><a href="DabelBrothersProductions/DabelBrothersProductions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -41757,6 +41834,13 @@
 
 <tr>
 <td>Jim Butcher's The Dresden Files: Storm Front</td>
+<td>2008</td>
+<td>Dabel Brothers</td>
+<td><a href="DabelBrothersProductions/DabelBrothersProductions.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Jim Butcher's The Dresden Files: Storm Front</td>
 <td>2017</td>
 <td>Dynamite</td>
 <td><a href="Dynamite/Dynamite.html">Details</a></td>
@@ -43530,6 +43614,13 @@
 <td>1962</td>
 <td>Creator</td>
 <td><a href="KevinEastman/KevinEastman.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Kevin Hearne's Iron Druid Chronicles: Hounded</td>
+<td>2018</td>
+<td>Dabel Brothers</td>
+<td><a href="DabelBrothersProductions/DabelBrothersProductions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -48139,6 +48230,13 @@
 </tr>
 
 <tr>
+<td>Magician Apprentice</td>
+<td>2006</td>
+<td>Dabel Brothers</td>
+<td><a href="DabelBrothersProductions/DabelBrothersProductions.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Magicians: Alice's Story</td>
 <td>2019</td>
 <td>Boom!</td>
@@ -48794,6 +48892,13 @@
 <td>1992</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Marshal: Tranquility</td>
+<td>2006</td>
+<td>Dabel Brothers</td>
+<td><a href="DabelBrothersProductions/DabelBrothersProductions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -50093,6 +50198,13 @@
 <td>2008</td>
 <td>Devil's Due</td>
 <td><a href="DevilsDue/DevilsDue.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mercy Thompson: Homecoming</td>
+<td>2008</td>
+<td>Dabel Brothers</td>
+<td><a href="DabelBrothersProductions/DabelBrothersProductions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -59231,6 +59343,13 @@
 </tr>
 
 <tr>
+<td>Ptolus: City By The Spire</td>
+<td>2006</td>
+<td>Dabel Brothers</td>
+<td><a href="DabelBrothersProductions/DabelBrothersProductions.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Pubo</td>
 <td>2003</td>
 <td>Dark Horse</td>
@@ -60362,6 +60481,13 @@
 <td>1952</td>
 <td>Avon</td>
 <td><a href="Avon/Avon.html">Details</a></td>
+
+<tr>
+<td>Red Prophet: The Tales Of Alvin Maker</td>
+<td>2006</td>
+<td>Dabel Brothers</td>
+<td><a href="DabelBrothersProductions/DabelBrothersProductions.html">Details</a></td>
+</tr>
 
 <tr>
 <td>Red Raider</td>
@@ -61539,10 +61665,26 @@
 </tr>
 
 <tr>
+<td>Robert Jordan's Wheel Of Time</td>
+<td>2009</td>
+<td>Dabel Brothers</td>
+<td><a href="DabelBrothersProductions/DabelBrothersProductions.html">Details</a></td>
+</tr>
+
+
+<tr>
 <td>Robert Jordan's Wheel Of Time: Eye Of The World</td>
 <td>2010</td>
 <td>Dynamite</td>
 <td><a href="Dynamite/Dynamite.html">Details</a></td>
+</tr>
+
+
+<tr>
+<td>Robert Jordan's Wheel Of Time: New Spring</td>
+<td>2009</td>
+<td>Dabel Brothers</td>
+<td><a href="DabelBrothersProductions/DabelBrothersProductions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -68184,6 +68326,13 @@
 </tr>
 
 <tr>
+<td>Stephen Darklord, The Survivor</td>
+<td>1987</td>
+<td>RAK</td>
+<td><a href="RAKGraphics/RAKGraphics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Steve Bissette</td>
 <td>1952</td>
 <td>Creator</td>
@@ -69996,6 +70145,14 @@
 <td><a href="Vertigo/Vertigo.html">Details</a></td>
 </tr>
 
+
+<tr>
+<td>Take A Chance</td>
+<td>2008</td>
+<td>Dabel Brothers</td>
+<td><a href="DabelBrothersProductions/DabelBrothersProductions.html">Details</a></td>
+</tr>
+
 <tr>
 <td>Takio</td>
 <td>2012</td>
@@ -71316,6 +71473,20 @@
 <td>1987</td>
 <td>Solson</td>
 <td><a href="SolsonPublications/SolsonPublications.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Thunder Mace</td>
+<td>1986</td>
+<td>RAK</td>
+<td><a href="RAKGraphics/RAKGraphics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Thunder Mace: The Telling Of The Legend</td>
+<td>1989</td>
+<td>RAK</td>
+<td><a href="RAKGraphics/RAKGraphics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -76914,6 +77085,14 @@
 <td><a href="WildCards/WildCards.html">Details</a></td>
 </tr>
 
+
+<tr>
+<td>Wild Cards: The Hard Call</td>
+<td>2008</td>
+<td>Dabel Brothers</td>
+<td><a href="DabelBrothersProductions/DabelBrothersProductions.html">Details</a></td>
+</tr>
+
 <tr>
 <td>Wild Kingdom</a>
 <td>1993</td>
@@ -77656,6 +77835,14 @@
 <td><a href="FoxPublications/FoxPublications.html">Details</a></td>
 </tr>
 
+
+<tr>
+<td>Wood Boy / The Burning Man</td>
+<td>2005</td>
+<td>Dabel Brothers</td>
+<td><a href="DabelBrothersProductions/DabelBrothersProductions.html">Details</a></td>
+</tr>
+
 <tr>
 <td>Woods</td>
 <td>2014</td>
@@ -78011,6 +78198,14 @@
 <td>2016</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+
+<tr>
+<td>WYRMS</td>
+<td>2006</td>
+<td>Dabel Brothers</td>
+<td><a href="DabelBrothersProductions/DabelBrothersProductions.html">Details</a></td>
 </tr>
 
 <tr>
